Fix grid alignment

--- a/scss/baseStyles/_grid.scss
+++ b/scss/baseStyles/_grid.scss
@@ -1,6 +1,7 @@
 .grid-container {
     width: 100%;
     display: grid;
+    margin-bottom: 15px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(4, 135px);
     gap: 15px;
